Set overflow CSS rule for placement-choice modal (to prevent save making the entire screen blue).

--- a/budget/staticapp/src/scss/_modals.scss
+++ b/budget/staticapp/src/scss/_modals.scss
@@ -20,6 +20,7 @@
     }
 
     &.placement-choice-modal {
+        overflow: hidden;
         width: 800px;
     }
 
